--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,6 @@
-APP_NAME=Laravel
-APP_ENV=local
-APP_KEY=
+APP_NAME=production
+APP_ENV=false
+APP_KEY=https://empowerai.com
 APP_DEBUG=true
 APP_URL=http://localhost
 
